--- a/Frontend/src/app/components/profile/profile.component.html
+++ b/Frontend/src/app/components/profile/profile.component.html
@@ -82,8 +82,10 @@
           </label>
           <span class="text-sm text-gray-500">Subir Imagen</span>
         </div>
-        <p>*No se permiten imagenes inapropiadas</p>
-        <p>*No se permiten imagenes con mensajes despectivos y/o políticos</p>
+        <p class="text-xs text-white mb-1">*No se permiten imágenes inapropiadas</p>
+        <p class="text-xs text-white">*No se permiten imágenes con mensajes despectivos y/o políticos</p>
+
+
         <div class="pt-12 pb-8">
           <!-- Botón de guardar cambios -->
           <div class="flex justify-center">
