--- a/Frontend/src/app/components/mis-anuncios/mis-anuncios.component.html
+++ b/Frontend/src/app/components/mis-anuncios/mis-anuncios.component.html
@@ -1,6 +1,6 @@
 <!-- Botón para crear un nuevo anuncio -->
 <div class="flex justify-center mt-8 mb-4"> <!-- Añadido mb-4 para margen inferior -->
-  <a [routerLink]="['/crear-anuncio']"
+  <a [routerLink]="['/paymentCrearAnuncio']"
     class="block bg-green-500 dark:bg-green-700 hover:bg-green-700 dark:hover:bg-green-900 text-white font-bold py-2 px-4 rounded mx-auto">Crear
     Nuevo Anuncio</a>
 </div>
