--- a/Frontend/src/app/components/add-programing-language/add-programing-language.component.html
+++ b/Frontend/src/app/components/add-programing-language/add-programing-language.component.html
@@ -1,1 +1,20 @@
-<p>add-programing-language works!</p>
+<!-- add-programing-language.component.html -->
+<div class="max-w-md mx-auto bg-white shadow-md rounded-md p-6 dark:bg-gray-800">
+    <h2 class="text-2xl font-bold text-gray-900 dark:text-white mb-4">Añadir Programa</h2>
+    <form *ngIf="LanguageData" (submit)="saveChanges()">
+      <!-- Language Name -->
+      <div class="relative z-0 w-full mb-5 group">
+        <input type="text" [(ngModel)]="LanguageData.languageName" name="languageName" id="languageName"
+          class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer mb-4"
+          placeholder=" " required />
+        <label for="languageName"
+          class="peer-focus:font-medium absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:start-0 rtl:peer-focus:translate-x-1/4 peer-focus:text-blue-600 peer-focus:dark:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">Language Name</label>
+      </div>
+
+      <!-- Other input fields... -->
+
+      <!-- Submit button -->
+      <button type="submit" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Guardar
+        Cambios</button>
+    </form>
+  </div>
