--- a/Frontend/src/app/components/advertisement/advertisement.component.html
+++ b/Frontend/src/app/components/advertisement/advertisement.component.html
@@ -17,7 +17,8 @@
 
             <div class="mt-6 flex flex-wrap gap-4 justify-center">
               <a routerLink="/payment" class="bg-blue-500 hover:bg-blue-600 text-white py-2 px-4 rounded">Contratar</a>
-              <a [routerLink]="['/addRating']" class="bg-gray-300 hover:bg-gray-400 text-gray-700 py-2 px-4 rounded">Añadir una
+              <a [routerLink]="['/addRating']"
+                class="bg-gray-300 hover:bg-gray-400 text-gray-700 py-2 px-4 rounded">Añadir una
                 Valoración</a>
             </div>
           </div>
