Modificaciones para el servidor

--- a/Frontend/src/app/components/comment-management/comment-management.component.html
+++ b/Frontend/src/app/components/comment-management/comment-management.component.html
@@ -6,7 +6,7 @@
         <th scope="col" class="px-6 py-3">Trasmitter</th>
         <th scope="col" class="px-6 py-3">Receiver</th>
         <th scope="col" class="px-6 py-3">Rating</th>
-        <th scope="col" class="px-6 py-3">Content</th>
+        <th scope="col" class="px-6 py-3">Comment</th>
         <th scope="col" class="px-6 py-3">Date</th>
         <th scope="col" class="px-6 py-3">Eliminar</th>
       </tr>
