--- a/Frontend/src/app/components/user-management/user-management.component.html
+++ b/Frontend/src/app/components/user-management/user-management.component.html
@@ -12,23 +12,27 @@
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let user of users.data" class="bg-white border-b dark:bg-gray-800 dark:border-gray-700">
-        <td class="px-6 py-4"><img class="w-10 h-10 rounded-full" [src]="user.img" alt="User image"></td>
-        <td class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">{{ user.username }}
-        </td>
-        <td class="px-6 py-4">{{ user.email }}</td>
-        <td class="px-6 py-4">{{ user.born_date }}</td>
-        <td class="px-6 py-4">{{ user.role_id }}</td>
-        <td class="px-6 py-4"> <a [routerLink]="['/editUser']" [queryParams]="{ userId: user.id }" class="ml-2">
-          <button type="button" class="focus:outline-none text-white bg-yellow-400 hover:bg-yellow-500 focus:ring-4 focus:ring-yellow-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:focus:ring-yellow-900">Edit</button>
-        </a></td>
-        <td class="px-6 py-4"><button type="button"
-            class="focus:outline-none text-white bg-red-700 hover:bg-red-800 focus:ring-4 focus:ring-red-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-red-600 dark:hover:bg-red-700 dark:focus:ring-red-900"
-            (click)="eliminarUsuario(user.id)">
-            Delete
-          </button>
-        </td>
-      </tr>
+      <!-- Utiliza ng-container para el filtro -->
+      <ng-container *ngFor="let user of users.data">
+        <tr *ngIf="user.role_id !== 3" class="bg-white border-b dark:bg-gray-800 dark:border-gray-700">
+          <td class="px-6 py-4"><img class="w-10 h-10 rounded-full" [src]="user.img" alt="User image"></td>
+          <td class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">{{ user.username }}</td>
+          <td class="px-6 py-4">{{ user.email }}</td>
+          <td class="px-6 py-4">{{ user.born_date }}</td>
+          <td class="px-6 py-4">{{ user.role_id }}</td>
+          <td class="px-6 py-4">
+            <a [routerLink]="['/editUser']" [queryParams]="{ userId: user.id }" class="ml-2">
+              <button type="button"
+                class="focus:outline-none text-white bg-yellow-400 hover:bg-yellow-500 focus:ring-4 focus:ring-yellow-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:focus:ring-yellow-900">Edit</button>
+            </a>
+          </td>
+          <td class="px-6 py-4">
+            <button type="button"
+              class="focus:outline-none text-white bg-red-700 hover:bg-red-800 focus:ring-4 focus:ring-red-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-red-600 dark:hover:bg-red-700 dark:focus:ring-red-900"
+              (click)="eliminarUsuario(user.id)">Delete</button>
+          </td>
+        </tr>
+      </ng-container>
     </tbody>
   </table>
 </div>
