--- a/Frontend/src/app/components/crear-anuncio/crear-anuncio.component.html
+++ b/Frontend/src/app/components/crear-anuncio/crear-anuncio.component.html
@@ -6,51 +6,79 @@
   <form (ngSubmit)="crearAnuncio()" #formularioAnuncio="ngForm">
 
     <div class="relative z-0 w-full mb-5 group">
-      <!-- Aquí he añadido la clase 'mb-4' -->
-      <input type="email" [(ngModel)]="nuevoAnuncio.title" name="email" id="email"
+      <input type="text" [(ngModel)]="nuevoAnuncio.title" name="title" id="title"
         class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer mb-4"
-        placeholder=" " required />
-      <label for="email"
+        placeholder=" " required #titleInput="ngModel" minlength="6" />
+      <label for="title"
         class="peer-focus:font-medium absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:start-0 rtl:peer-focus:translate-x-1/4 peer-focus:text-blue-600 peer-focus:dark:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">Title</label>
+      <div
+        *ngIf="titleInput.touched && titleInput.invalid && (titleInput.errors?.['required'] || titleInput.errors?.['minlength'])"
+        class="text-red-500">
+        <div *ngIf="titleInput.errors?.['required']">Title is required</div>
+        <div *ngIf="titleInput.errors?.['minlength']">Title must be at least 6 characters long</div>
+      </div>
     </div>
+
 
     <!-- Class -->
     <div class="relative z-0 w-full mb-5 group">
-      <input type="email" [(ngModel)]="nuevoAnuncio.class" name="email" id="email"
+      <input type="text" [(ngModel)]="nuevoAnuncio.class" name="class" id="class"
         class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer mb-4"
-        placeholder=" " required />
-      <label for="email"
+        placeholder=" " required #classInput="ngModel" minlength="6" />
+      <label for="class"
         class="peer-focus:font-medium absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:start-0 rtl:peer-focus:translate-x-1/4 peer-focus:text-blue-600 peer-focus:dark:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">Class</label>
+      <div
+        *ngIf="classInput.touched && classInput.invalid && (classInput.errors?.['required'] || classInput.errors?.['minlength'])"
+        class="text-red-500">
+        <div *ngIf="classInput.errors?.['required']">Class is required</div>
+        <div *ngIf="classInput.errors?.['minlength']">Class must be at least 6 characters long</div>
+      </div>
     </div>
 
     <!-- About Me -->
     <div class="relative z-0 w-full mb-5 group">
       <!-- Añadida clase 'mb-4' -->
-      <input type="email" [(ngModel)]="nuevoAnuncio.about_me" name="email" id="email"
+      <input type="text" [(ngModel)]="nuevoAnuncio.about_me" name="about_me" id="about_me"
         class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer mb-4"
-        placeholder=" " required />
-      <label for="email"
+        placeholder=" " required #abouMeInput="ngModel" minlength="6" />
+      <label for="about_me"
         class="peer-focus:font-medium absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:start-0 rtl:peer-focus:translate-x-1/4 peer-focus:text-blue-600 peer-focus:dark:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">About
         Me</label>
+      <div
+        *ngIf="abouMeInput.touched && abouMeInput.invalid && (abouMeInput.errors?.['required'] || abouMeInput.errors?.['minlength'])"
+        class="text-red-500">
+        <div *ngIf="abouMeInput.errors?.['required']">About Me is required</div>
+        <div *ngIf="abouMeInput.errors?.['minlength']">About Me must be at least 6 characters long</div>
+      </div>
     </div>
 
     <!-- Descripcion & Price/Hour -->
     <div class="grid md:grid-cols-2 md:gap-6">
       <div class="relative z-0 w-full mb-5 group">
         <!-- Añadida clase 'mb-4' -->
-        <input type="text" [(ngModel)]="nuevoAnuncio.description" name="first_name" id="first_name"
+        <input type="text" [(ngModel)]="nuevoAnuncio.description" name="description" id="description"
           class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer mb-4"
-          placeholder=" " required />
-        <label for="first_name"
+          placeholder=" " required #descriptionInput="ngModel" minlength="6" />
+        <label for="description"
           class="peer-focus:font-medium absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:start-0 rtl:peer-focus:translate-x-1/4 peer-focus:text-blue-600 peer-focus:dark:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">Description</label>
+        <div
+          *ngIf="descriptionInput.touched && descriptionInput.invalid && (descriptionInput.errors?.['required'] || descriptionInput.errors?.['minlength'])"
+          class="text-red-500">
+          <div *ngIf="descriptionInput.errors?.['required']">Description is required</div>
+          <div *ngIf="descriptionInput.errors?.['minlength']">Description must be at least 6 characters long</div>
+        </div>
       </div>
       <div class="relative z-0 w-full mb-5 group">
-        <!-- Añadida clase 'mb-4' -->
-        <input type="text" [(ngModel)]="nuevoAnuncio.price_hour" name="last_name" id="last_name"
+        <input type="number" [(ngModel)]="nuevoAnuncio.price_hour" id="price_hour" name="price_hour"
           class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer mb-4"
-          placeholder=" " required />
-        <label for="last_name"
+          placeholder=" " required #priceInput="ngModel" />
+        <label for="price_hour"
           class="peer-focus:font-medium absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:start-0 rtl:peer-focus:translate-x-1/4 peer-focus:text-blue-600 peer-focus:dark:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">Price/Hour</label>
+        <div
+          *ngIf="priceInput.touched && priceInput.invalid && (priceInput.errors?.['required'] || priceInput.errors?.['minlength'])"
+          class="text-red-500">
+          <div *ngIf="priceInput.errors?.['required']">Price is required</div>
+        </div>
       </div>
     </div>
 
@@ -58,34 +86,50 @@
     <div class="grid md:grid-cols-2 md:gap-6">
       <div class="relative z-0 w-full mb-5 group">
         <!-- Añadida clase 'mb-4' -->
-        <input type="tel" [(ngModel)]="nuevoAnuncio.disponibility" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" name="phone"
-          id="phone"
+        <input type="text" [(ngModel)]="nuevoAnuncio.disponibility" name="disponibility" id="disponibility"
           class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer mb-4"
-          placeholder=" " required />
-        <label for="phone"
+          placeholder=" " required #disponibilityInput="ngModel" minlength="6" />
+        <label for="disponibility"
           class="peer-focus:font-medium absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:start-0 rtl:peer-focus:translate-x-1/4 peer-focus:text-blue-600 peer-focus:dark:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">Disponibility</label>
+        <div
+          *ngIf="disponibilityInput.touched && disponibilityInput.invalid && (disponibilityInput.errors?.['required'] || disponibilityInput.errors?.['minlength'])"
+          class="text-red-500">
+          <div *ngIf="disponibilityInput.errors?.['required']">Disponibility is required</div>
+          <div *ngIf="disponibilityInput.errors?.['minlength']">Disponibility must be at least 6 characters long</div>
+        </div>
       </div>
       <div class="relative z-0 w-full mb-5 group">
         <!-- Añadida clase 'mb-4' -->
-        <input type="text" [(ngModel)]="nuevoAnuncio.experience" name="company" id="company"
+        <input type="text" [(ngModel)]="nuevoAnuncio.experience" name="experience" id="experience"
           class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer mb-4"
-          placeholder=" " required />
-        <label for="company"
+          placeholder=" " required #experienceInput="ngModel" minlength="6" />
+        <label for="experience"
           class="peer-focus:font-medium absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:start-0 rtl:peer-focus:translate-x-1/4 peer-focus:text-blue-600 peer-focus:dark:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">Experience</label>
+        <div
+          *ngIf="experienceInput.touched && experienceInput.invalid && (experienceInput.errors?.['required'] || experienceInput.errors?.['minlength'])"
+          class="text-red-500">
+          <div *ngIf="experienceInput.errors?.['required']">Experience is required</div>
+          <div *ngIf="experienceInput.errors?.['minlength']">Experience must be at least 6 characters long</div>
+        </div>
       </div>
     </div>
     <!-- Boton lenguajes -->
     <div class="mb-4">
       <label for="programmingLanguageId" class="block text-gray-700 font-bold mb-2 dark:text-white">Lenguaje de
         Programación</label>
-      <div class="relative">
-        <select id="programmingLanguageId" name="programmingLanguage_id"
-          class="block appearance-none w-full bg-white border border-gray-300 text-gray-700 py-2 px-3 rounded leading-tight focus:outline-none focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:text-gray-200"
-          [(ngModel)]="nuevoAnuncio.programmingLanguage_id" required>
-          <option *ngFor="let language of programmingLanguages" [value]="language.id">{{ language.languageName }}
-          </option>
-        </select>
+      <div class="mb-4">
+        <div class="relative">
+          <select id="programmingLanguageId" name="programmingLanguage_id"
+            class="block appearance-none w-full bg-white border border-gray-300 text-gray-700 py-2 px-3 rounded leading-tight focus:outline-none focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:text-gray-200"
+            [(ngModel)]="nuevoAnuncio.programmingLanguage_id" required #languageInput="ngModel">
+            <option *ngFor="let language of programmingLanguages" [value]="language.id">{{ language.languageName }}
+            </option>
+          </select>
+          <div *ngIf="languageInput.touched && languageInput.invalid && languageInput.errors?.['required']"
+            class="text-red-500">Por favor selecciona un lenguaje de programación</div>
+        </div>
       </div>
+
     </div>
     <!-- Botón para enviar el formulario -->
     <button type="submit" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Crear
